ecs.tf
# ECS Cluster 
resource "aws_ecs_cluster" "healthcare_cluster" {
  name = "healthcare-cluster"
}

# IAM Roles 
resource "aws_iam_role" "ecs_task_execution_role1" {
  name = "ecs-task-execution-role1"

  assume_role_policy = jsonencode({
    Version = "2012-10-17",
    Statement = [{
      Action = "sts:AssumeRole",
      Effect = "Allow",
      Principal = {
        Service = "ecs-tasks.amazonaws.com"
      }
    }]
  })
}

resource "aws_iam_role_policy_attachment" "ecs_task_execution_role_policy" {
  role       = aws_iam_role.ecs_task_execution_role1.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

#  Patient Service
resource "aws_ecs_task_definition" "patient_service" {
  family                   = "patient-service"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = 256
  memory                   = 512
  execution_role_arn       = aws_iam_role.ecs_task_execution_role1.arn

  container_definitions = jsonencode([{
    name      = "patient-service",
    image     = "${aws_ecr_repository.patient_service.repository_url}:latest",
    essential = true,
    portMappings = [{
      containerPort = 3000,
      hostPort      = 3000,
      protocol      = "tcp"
    }],
    logConfiguration = {
      logDriver = "awslogs",
      options = {
        "awslogs-group"         = "/ecs/patient-service",
        "awslogs-region"        = "us-east-1",
        "awslogs-stream-prefix" = "ecs"
      }
    }
  }])
}

resource "aws_ecs_service" "patient_service" {
  name            = "patient-service"
  cluster         = aws_ecs_cluster.healthcare_cluster.id
  task_definition = aws_ecs_task_definition.patient_service.arn
  launch_type     = "FARGATE"
  desired_count   = 1

  network_configuration {
    subnets          = module.vpc.private_subnets
    security_groups  = [aws_security_group.ecs_service.id]
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.patient_service.arn
    container_name   = "patient-service"
    container_port   = 3000
  }

  depends_on = [aws_lb_listener.patient-appointment_alb]
}

#  Appointment Service
resource "aws_ecs_task_definition" "appointment_service" {
  family                   = "appointment-service"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = 256
  memory                   = 512
  execution_role_arn       = aws_iam_role.ecs_task_execution_role1.arn

  container_definitions = jsonencode([{
    name      = "appointment-service",
    image     = "${aws_ecr_repository.appointment_service.repository_url}:latest",
    essential = true,
    portMappings = [{
      containerPort = 3001,
      hostPort      = 3001,
      protocol      = "tcp"
    }],
    logConfiguration = {
      logDriver = "awslogs",
      options = {
        "awslogs-group"         = "/ecs/appointment-service",
        "awslogs-region"        = "us-east-1",
        "awslogs-stream-prefix" = "ecs"
      }
    }
  }])
}

resource "aws_ecs_service" "appointment_service" {
  name            = "appointment-service"
  cluster         = aws_ecs_cluster.healthcare_cluster.id
  task_definition = aws_ecs_task_definition.appointment_service.arn
  launch_type     = "FARGATE"
  desired_count   = 1

  network_configuration {
    subnets          = module.vpc.private_subnets
    security_groups  = [aws_security_group.ecs_service.id]
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.appointment_service.arn
    container_name   = "appointment-service"
    container_port   = 3001
  }

  depends_on = [aws_lb_listener.patient-appointment_alb]
}
